# human-aware-waypoint

./: LICENSE  README.md
waypoint_generator/: CMakeLists.txt  package.xml  setup.py
waypoint_generator/config/: params.yaml
waypoint_generator/launch/: corner_detector.launch
waypoint_generator/scripts/: corner_avoid.py  corner_handler.py  log_vel.py
waypoint_generator/src/waypoint_generator/: corner_handler.py
